--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,18 @@
 {
   "extends": [
+    "next",
     "next/core-web-vitals",
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:prettier/recommended"
   ],
+  "plugins": ["prettier"],
   "parserOptions": {
+    "ecmaVersion": 2021,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    },
     "babelOptions": {
       "presets": ["next/babel"]
     }
@@ -22,7 +29,8 @@
     "semi": ["error", "always"],
     "quotes": "off",
     "react/jsx-uses-react": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "prettier/prettier": "error"
   },
   "settings": {
     "react": {
