--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "reactstrap": "^9.2.2",
+    "rxjs": "^7.8.1",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
