--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.2.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.3.19",
