--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
     "rxjs": "^7.8.1",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
