test branch to fetch data from AWS SDK

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,11 @@
       "presets": ["next/babel"]
     }
   },
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  },
   "rules": {
     "eqeqeq": "error",
     "curly": "error",
