--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.637.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
@@ -18,10 +19,13 @@
     "@stripe/stripe-js": "^4.2.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.4",
     "framer-motion": "^11.3.19",
     "next": "^14.2.5",
     "next-auth": "^4.24.7",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
