--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.3.19",
     "next": "^14.2.5",
     "next-auth": "^4.24.7",
