add UI/UX of charts

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.19",
     "next": "^14.2.5",
