--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "reactstrap": "^9.2.2",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.5",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.4.0",
     "zustand": "^4.5.5"
   },
