--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.3.1",
     "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
+    "recharts": "^2.12.7",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.5",
     "socket.io-client": "^4.7.5",
