--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-auth": "^4.24.7",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
+    "react-burger-menu": "^3.0.9",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-toastify": "^10.0.5",
